--- a/lesson-10-react-router-dom/package.json
+++ b/lesson-10-react-router-dom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson-10-react-router-dom",
+  "name": "react-router-dom",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
