--- a/lesson-12-redux/package.json
+++ b/lesson-12-redux/package.json
@@ -2,6 +2,7 @@
   "name": "lesson-12-redux",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kennymasTech.github.io/ReactJS-Full-Course",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
