--- a/lesson-17-react-use-reduce/package.json
+++ b/lesson-17-react-use-reduce/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-use-memo",
+  "name": "lesson-16-react-use-ref-timer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
